prevent dropdown menu overlapping after enabling "left-thin" mode

--- a/src/web/browser-window/index.scss
+++ b/src/web/browser-window/index.scss
@@ -61,6 +61,11 @@ form .required label::after {
     }
 }
 
+// "bootstrap"
+bs-dropdown-container {
+    z-index: $zindex-dropdown;
+}
+
 // "ng-select"
 ng-select.ng-invalid.ng-touched .ng-select-container { // sass-lint:disable-line no-qualifying-elements
     border-color: #dc3545;
